--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   firebase_core: ^1.18.0
   firebase_auth: ^3.3.20
   google_sign_in: ^5.3.3
+  flutter_displaymode: ^0.4.0
+  pinput: ^2.2.11
 
 dev_dependencies:
   flutter_test:
@@ -66,6 +68,7 @@ flutter:
   assets:
     - assets/images/login/gmail_screen.png
     - assets/images/login/google_logo.png
+    - assets/images/login/enter_number_bg.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
