--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   google_sign_in: ^5.3.3
   flutter_displaymode: ^0.4.0
   pinput: ^2.2.11
+  cloud_firestore: ^3.2.1
+  pin_code_fields: ^7.4.0
 
 dev_dependencies:
   flutter_test:
