--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   pinput: ^2.2.11
   cloud_firestore: ^3.2.1
   pin_code_fields: ^7.4.0
+  font_awesome_flutter: ^10.1.0
 
 dev_dependencies:
   flutter_test:
