--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   pin_code_fields: ^7.4.0
   font_awesome_flutter: ^10.1.0
   flutter_svg: ^1.1.1+1
+  flutter_riverpod: ^1.0.4
 
 dev_dependencies:
   flutter_test:
@@ -70,9 +71,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/login/gmail_screen.png
-    - assets/images/login/google_logo.png
-    - assets/images/login/enter_number_bg.png
+    - assets/images/login/
     - assets/images/test.png
     - assets/images/setting_icons/
   #   - images/a_dot_ham.jpeg
