--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   font_awesome_flutter: ^10.1.0
   flutter_svg: ^1.1.1+1
   flutter_riverpod: ^1.0.4
+  auto_size_text: ^3.0.0
 
 dev_dependencies:
   flutter_test:
