--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,10 +1,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.fise_app">
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
    <application
         android:label="fise_app"
         android:name="${applicationName}"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/ic_launcher"
+        tools:node="merge">
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -31,5 +33,7 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+        <meta-data android:name="com.google.android.gms.version"
+          android:value="@integer/google_play_services_version" />
     </application>
 </manifest>
