--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,7 +51,6 @@ dependencies:
   yahoofin: ^0.0.8
   http: ^0.13.4
   cashfree_pg: ^2.0.10+30
-  telephony: ^0.2.0
   flutter_sms_inbox: ^1.0.1
   permission_handler: ^10.0.0
 
@@ -59,12 +58,12 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  # The "flutter_lints" package below contains a set of recommended lints to
+  # The "a" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  a: ^2.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
