--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,8 @@ dependencies:
   cashfree_pg: ^2.0.10+30
   flutter_sms_inbox: ^1.0.1
   permission_handler: ^10.0.0
+  shared_preferences: ^2.0.15
+  local_auth: ^2.1.2
 
 dev_dependencies:
   flutter_test:
