--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   permission_handler: ^10.0.0
   shared_preferences: ^2.0.15
   local_auth: ^2.1.2
+  fluttertoast: ^8.0.9
 
 dev_dependencies:
   flutter_test:
