--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,8 @@ dependencies:
   shared_preferences: ^2.0.15
   local_auth: ^2.1.2
   fluttertoast: ^8.0.9
+  image_picker: ^0.8.5+3
+  firebase_storage: ^10.3.7
 
 
 dev_dependencies:
